--- a/admin.html
+++ b/admin.html
@@ -693,7 +693,7 @@
                     <div class="action-description">Upload CSV files with multiple jobs at once</div>
                 </div>
               
-                <div class="action-card" onclick="window.location.href='timeline.html'">
+                <div class="action-card" onclick="window.location.href='viewtimeline.html'">
                     <div class="action-icon">📅</div>
                     <div class="action-title">View Timeline</div>
                     <div class="action-description">See all jobs in chronological order</div>
