--- a/admin.html
+++ b/admin.html
@@ -723,7 +723,7 @@
                     <div class="action-description">Browse all finished installations</div>
                 </div>
               
-                <div class="action-card" onclick="exportData()">
+                <div class="action-card" onclick="window.location.href='adminexport.html'">
                     <div class="action-icon">💾</div>
                     <div class="action-title">Export Data</div>
                     <div class="action-description">Download job data as CSV or JSON</div>
