--- a/admin.html
+++ b/admin.html
@@ -705,10 +705,10 @@
                     <div class="action-description">See job locations on an interactive map</div>
                 </div>
               
-                <div class="action-card" onclick="showSection('amend-jobs')">
+                <div class="action-card" onclick="showSection('adminviewjobs-jobs')">
                     <div class="action-icon">✏️</div>
-                    <div class="action-title">Amend Jobs</div>
-                    <div class="action-description">Edit existing job details and information</div>
+                    <div class="action-title">View All Jobs</div>
+                    <div class="action-description">view all jobs, Edit existing job details and information</div>
                 </div>
               
                 <div class="action-card" onclick="showSection('outstanding')">
