--- a/admin.html
+++ b/admin.html
@@ -705,7 +705,7 @@
                     <div class="action-description">See job locations on an interactive map</div>
                 </div>
               
-                <div class="action-card" onclick="window.'adminviewjobs.html'">
+                <div class="action-card" onclick="window.location.href='adminviewjobs.html'">
                     <div class="action-icon">✏️</div>
                     <div class="action-title">View All Jobs</div>
                     <div class="action-description">view all jobs, Edit existing job details and information</div>
