--- a/admin.html
+++ b/admin.html
@@ -687,7 +687,7 @@
                     <div class="action-description">Add a new job quickly with essential details</div>
                 </div>
               
-                <div class="action-card" onclick="window.location.href='mass-upload.html'">
+                <div class="action-card" onclick="window.location.href='adminupload.html'">
                     <div class="action-icon">📤</div>
                     <div class="action-title">Mass Data Upload</div>
                     <div class="action-description">Upload CSV files with multiple jobs at once</div>
