--- a/map.html
+++ b/map.html
@@ -425,7 +425,7 @@
                 <a href="admin.html" class="back-btn">← Back to Admin</a>
             </div>
             <h1>Job Location Heat Map</h1>
-            <p class="subtitle">Visualize upcoming job locations across the UK</p>
+            <p class="subtitle">Visualise upcoming job locations across the UK</p>
         </header>
        
         <main>
@@ -485,7 +485,7 @@
                 <div class="legend">
                     <div class="legend-title">📍 Status Legend</div>
                     <div class="legend-item">
-                        <div class="legend-color" style="background: #FFFFFF;"></div>
+                        <div class="legend-color" style="background: #000000;"></div>
                         <span>Upcoming</span>
                     </div>
                     <div class="legend-item">
