--- a/map.html
+++ b/map.html
@@ -638,8 +638,8 @@
                 return { color: '#FF0000', flashing: true };
             }
 
-            // White for upcoming (future dates or any other status)
-            return { color: '#FFFFFF', flashing: false };
+            // Black for upcoming (future dates or any other status)
+            return { color: '#000000', flashing: false };
         }
        
         // Load jobs from Firebase collection "Solar-jobs"
