--- a/map.html
+++ b/map.html
@@ -484,7 +484,7 @@
                 <div class="legend">
                     <div class="legend-title">📍 Status Legend</div>
                     <div class="legend-item">
-                        <div class="legend-color" style="background: #FFFFFF;"></div>
+                        <div class="legend-color" style="background: #000000;"></div>
                         <span>Upcoming</span>
                     </div>
                     <div class="legend-item">
@@ -659,7 +659,7 @@
             }
 
             // White for upcoming (future dates or any other status)
-            return { color: '#FFFFFF', flashing: false };
+            return { color: '#000000', flashing: false };
         }
        
         // Load jobs from Firebase collection "Solar-jobs"
