--- a/adminemail.html
+++ b/adminemail.html
@@ -555,7 +555,7 @@
             console.log('✅ Firebase initialized');
            
             window.addEventListener('DOMContentLoaded', () => {
-                emailjs.init("YOUR_EMAILJS_PUBLIC_KEY"); // Replace with your actual public key
+                emailjs.init("ziLnha91scpGjFABh"); // Replace with your actual public key
                 window.loadTodaysJobs();
                 window.startClock();
             });
