--- a/adminemail.html
+++ b/adminemail.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -555,7 +555,7 @@
             console.log('✅ Firebase initialized');
            
             window.addEventListener('DOMContentLoaded', () => {
-                emailjs.init(ziLnha91scpGjFABh); 
+                emailjs.init("ziLnha91scpGjFABh");
                 window.loadTodaysJobs();
                 window.startClock();
             });
