--- a/adminaudit.html
+++ b/adminaudit.html
@@ -983,12 +983,13 @@
                             }
                         }
 
-                        // Get completion timestamp - when job was marked as complete
+                        // Get completedTimestamp from Firebase (when job was marked complete)
                         let completedTimestamp = null;
                         if (data['completedTimestamp']) {
                             completedTimestamp = new Date(data['completedTimestamp']);
                         } else {
-                            // Fallback to completion date if no timestamp
+                            // Log warning for jobs missing timestamp (older completed jobs)
+                            console.warn(`Job #${data['Job Number']} missing completedTimestamp - using fallback`);
                             completedTimestamp = jobDate || new Date();
                         }
 
