--- a/adminaudit.html
+++ b/adminaudit.html
@@ -999,7 +999,7 @@
                             postcode: data['Postcode'] || 'N/A',
                             engineer: engineer,
                             jobType: data['Job Type'] || 'Standard',
-                            completionDate: jobDate,
+                            completionDate: displayDate,
                             completedTimestamp: completedTimestamp,
                             auditStatus: data['auditStatus'] || 'pending',
                             auditNotes: data['auditNotes'] || '',
