--- a/adminaudit.html
+++ b/adminaudit.html
@@ -993,6 +993,9 @@
                             completedTimestamp = jobDate || new Date();
                         }
 
+                        // Use completedTimestamp for display, fallback to jobDate
+                        const displayDate = completedTimestamp || jobDate;
+
                         allJobs.push({
                             id: docSnap.id,
                             jobNumber: data['Job Number'] || 'N/A',
