--- a/map.html
+++ b/map.html
@@ -403,7 +403,7 @@
                 <div class="legend">
                     <div class="legend-title">📍 Status Legend</div>
                     <div class="legend-item">
-                        <div class="legend-color" style="background: #FFFFFF;"></div>
+                        <div class="legend-color" style="background: #000000;"></div>
                         <span>Upcoming (Future)</span>
                     </div>
                     <div class="legend-item">
@@ -592,7 +592,7 @@
             }
 
             // White for upcoming (future dates)
-            return { color: '#FFFFFF', flashing: false };
+            return { color: '#000000', flashing: false };
         }
        
         // Load jobs from Firebase collection "Solar-jobs"
@@ -812,7 +812,7 @@
                 const marker = L.circleMarker([job.coordinates.lat, job.coordinates.lng], {
                     radius: 8,
                     fillColor: colorData.color,
-                    color: colorData.flashing ? '#FF0000' : '#ffffff',
+                    color: colorData.flashing ? '#FF0000' : '#000000',
                     weight: 2,
                     opacity: 1,
                     fillOpacity: colorData.flashing ? 0.85 : 0.85,
