--- a/viewtimeline.html
+++ b/viewtimeline.html
@@ -1202,7 +1202,7 @@
                 `;
                 
                 const templateParams = {
-                    to_email: 'kevin.boyd@next-gen.uk, dean.bramwell@next-gen.uk, barry.dixon@next-gen.uk',
+                    to_email: 'kevin.boyd@next-gen.uk, dean.bramwell@next-gen.uk, barry.dixon@next-gen.uk, liam.bannister@next-gen.uk',
                     job_number: jobNumber,
                     postcode: postcode,
                     engineer: engineer,
