--- a/viewtimeline.html
+++ b/viewtimeline.html
@@ -835,7 +835,7 @@
             
             <div class="debug-info" id="email-notifications" style="display: block; background: linear-gradient(135deg, rgba(78, 236, 163, 0.1), rgba(0, 217, 255, 0.1)); border: 2px solid var(--success);">
                 <strong>📧 Email Notifications Active</strong><br>
-                <span style="font-size: 0.8rem;">Automatic emails will be sent to Kevin Boyd and Dean Bramwell when jobs are marked as complete.</span>
+                <span style="font-size: 0.8rem;">Automatic emails will be sent to Kevin Boyd, Liam Bannister and Dean Bramwell when jobs are marked as complete.</span>
             </div>
         </div>
        
