--- a/viewtimeline.html
+++ b/viewtimeline.html
@@ -1247,7 +1247,7 @@
                                 <table style="width: 100%; border-collapse: collapse;">
                                     <tr>
                                         <td style="padding: 10px 0; color: #666; font-weight: 600;">Job Number:</td>
-                                        <td style="padding: 10px 0; color: #333; font-weight: bold;">#${jobNumber}</td>
+                                        <td style="padding: 10px 0; color: #333; font-weight: bold;">${jobNumber}</td>
                                     </tr>
                                     <tr>
                                         <td style="padding: 10px 0; color: #666; font-weight: 600;">Postcode:</td>
@@ -1270,7 +1270,7 @@
                             
                             <div style="background: #e8f8f3; padding: 15px; border-radius: 8px; border-left: 4px solid #4ECCA3;">
                                 <p style="margin: 0; color: #333; font-size: 0.95rem;">
-                                    <strong>Status:</strong> All days for this job have been marked as complete. Invoice details will be submitted separately.
+                                    <strong>Status:</strong> All days for this job have been marked as complete.
                                 </p>
                             </div>
                             
