--- a/workscreen.html
+++ b/workscreen.html
@@ -139,13 +139,13 @@
         .status-grid {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: 1rem;
+            gap: 0.8rem;
         }
 
         .status-card {
             background: linear-gradient(135deg, rgba(37, 37, 65, 0.6), rgba(26, 26, 46, 0.6));
             border-radius: 12px;
-            padding: 1.2rem;
+            padding: 0.8rem 1rem;
             border: 2px solid rgba(255, 107, 53, 0.2);
         }
 
@@ -153,24 +153,24 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 0.7rem;
+            margin-bottom: 0.3rem;
         }
 
         .status-label {
-            font-size: 0.75rem;
+            font-size: 0.7rem;
             color: #9A9AB0;
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 0.5px;
         }
 
         .status-icon {
-            font-size: 1.5rem;
+            font-size: 1.2rem;
         }
 
         .status-value {
             font-family: 'Syne', sans-serif;
-            font-size: 2.8rem;
-            font-weight: 700;
+            font-size: 4rem;
+            font-weight: 800;
             line-height: 1;
         }
 
