--- a/viewtimeline.html
+++ b/viewtimeline.html
@@ -854,18 +854,48 @@
                 <button class="close-btn" onclick="closeStatusModal()">×</button>
             </div>
             <div class="modal-body">
+                <div class="modal-body">
                 <div class="detail-row">
                     <div class="detail-label">Job Number</div>
                     <div class="detail-value" id="status-job-number"></div>
+                </div>
+                <div class="detail-row">
+                    <div class="detail-label">Address</div>
+                    <div class="detail-value" id="status-address"></div>
+                </div>
+                <div class="detail-row">
+                    <div class="detail-label">Postcode</div>
+                    <div class="detail-value" id="status-postcode"></div>
                 </div>
                 <div class="detail-row">
                     <div class="detail-label">Job Type</div>
                     <div class="detail-value" id="status-job-type"></div>
                 </div>
                 <div class="detail-row">
+                    <div class="detail-label">Booked Date</div>
+                    <div class="detail-value" id="status-booked-date"></div>
+                </div>
+                <div class="detail-row">
+                    <div class="detail-label">Days</div>
+                    <div class="detail-value" id="status-days"></div>
+                </div>
+                <div class="detail-row">
+                    <div class="detail-label">Lead Engineer</div>
+                    <div class="detail-value" id="status-lead"></div>
+                </div>
+                <div class="detail-row">
+                    <div class="detail-label">Team Number</div>
+                    <div class="detail-value" id="status-team"></div>
+                </div>
+                <div class="detail-row">
+                    <div class="detail-label">Panel Number</div>
+                    <div class="detail-value" id="status-panel"></div>
+                </div>
+                <div class="detail-row">
                     <div class="detail-label">Current Status</div>
                     <div class="detail-value" id="status-current"></div>
                 </div>
+
 
                 <div class="status-buttons">
                     <button class="status-btn in-progress" onclick="updateJobStatus('In-Progress')">
@@ -1540,13 +1570,21 @@
             selectedCompletionDays = [...(job.completedDays || [])];
            
             document.getElementById('status-job-number').textContent = job['Job Number'] || 'N/A';
+            document.getElementById('status-address').textContent = job['Address'] || 'N/A';
+            document.getElementById('status-postcode').textContent = job['Postcode'] || 'N/A';
             document.getElementById('status-job-type').textContent = job.jobType || 'Standard';
+            document.getElementById('status-booked-date').textContent = formatDate(job.parsedDate) || 'N/A';
+            document.getElementById('status-days').textContent = job.jobLength || '1';
+            document.getElementById('status-lead').textContent = job.engineer || 'Unassigned';
+            document.getElementById('status-team').textContent = job['Team Number'] || job['Team'] || 'N/A';
+            document.getElementById('status-panel').textContent = job['Panel No.'] || job['Panel Number'] || 'N/A';
             document.getElementById('status-current').textContent = job.status || 'Scheduled';
             document.getElementById('job-notes').value = job.notes || '';
            
             document.getElementById('completion-selector').style.display = 'none';
             document.getElementById('status-modal').classList.add('show');
         }
+
 
         function closeStatusModal() {
             document.getElementById('status-modal').classList.remove('show');
