--- a/viewtimeline.html
+++ b/viewtimeline.html
@@ -432,30 +432,30 @@
 
         /* Arrow connector styles */
         .job-arrow {
-            position: absolute;
-            height: 3px;
+            position: relative;
+            height: 4px;
             background: linear-gradient(90deg, var(--accent), var(--primary));
             pointer-events: none;
             z-index: 3;
             display: flex;
             align-items: center;
             justify-content: flex-end;
-            box-shadow: 0 2px 8px rgba(0, 217, 255, 0.5);
+            box-shadow: 0 2px 12px rgba(0, 217, 255, 0.6);
         }
 
         .job-arrow::after {
             content: '→';
             color: var(--primary);
-            font-size: 1.2rem;
+            font-size: 1.5rem;
             font-weight: 900;
-            margin-right: -8px;
-            text-shadow: 0 0 8px rgba(255, 107, 53, 0.8);
+            margin-right: -10px;
+            text-shadow: 0 0 10px rgba(255, 107, 53, 1);
             animation: arrowPulse 2s ease-in-out infinite;
         }
 
         @keyframes arrowPulse {
-            0%, 100% { transform: translateX(0); opacity: 1; }
-            50% { transform: translateX(5px); opacity: 0.7; }
+            0%, 100% { transform: translateX(0) scale(1); opacity: 1; }
+            50% { transform: translateX(8px) scale(1.1); opacity: 0.8; }
         }
 
         .job-arrow.split-indicator {
@@ -1670,18 +1670,15 @@
                 `;
             });
             
-            // Render arrows
+            // Render arrows - stretch across the full gap
             arrows.forEach(arrow => {
-                const arrowWidth = (arrow.toCol - arrow.fromCol) * 120; // Approximate column width
-                const arrowLeft = arrow.fromCol * 120; // Approximate position
-                const arrowTop = (arrow.row * 70) + 35; // Center of row
-                
                 html += `
                     <div class="job-arrow" style="
                         grid-column: ${arrow.fromCol + 1} / ${arrow.toCol + 1};
                         grid-row: ${arrow.row + 1};
                         align-self: center;
-                        margin: 0 10px;
+                        margin: 0 5px;
+                        height: 4px;
                     "></div>
                 `;
             });
