--- a/admin.html
+++ b/admin.html
@@ -790,7 +790,7 @@
                         </div>
                         <div class="form-group">
                             <label class="form-label">Status Update *</label>
-                            <select class="form-select" id="status-update" required>
+                            <select class="form-select" id="status-update">
                                 <option value="">No Status</option>
                                 <option value="in-progress">In Progress</option>
                                 <option value="complete">Complete</option>
