--- a/admin.html
+++ b/admin.html
@@ -785,6 +785,10 @@
                             <input type="number" class="form-input" id="days" required>
                         </div>
                         <div class="form-group">
+                            <label class="form-label">Panel No. *</label>
+                            <input type="text" class="form-input" id="panel-no" required>
+                        </div>
+                        <div class="form-group">
                             <label class="form-label">Status Update *</label>
                             <select class="form-select" id="status-update">
                                 <option value="">No Status</option>
@@ -976,6 +980,10 @@
                             <option value="aborted">Aborted</option>
                             <option value="cancelled">Cancelled</option>
                         </select>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">PO</label>
+                        <input type="text" class="form-input" id="edit-po">
                     </div>
                     <div class="form-group">
                         <label class="form-label">Lead</label>
