--- a/adminexport.html
+++ b/adminexport.html
@@ -667,6 +667,7 @@
             'Lead',
             'Team Number',
             'notes',
+            'auditnotes',
             'invoiceOctopus',
             'invoiceLead'
         ];
