--- a/viewtimeline.html
+++ b/viewtimeline.html
@@ -952,7 +952,7 @@
                     <button class="status-btn in-progress" onclick="updateJobStatus('In-Progress')">
                         🔄 In-Progress
                     </button>
-                    <button class="status-btn complete" onclick="showCompletionSelector()">
+                    <button class="status-btn complete" onclick="updateJobStatus('Complete')">
                         ✅ Complete
                     </button>
                     <button class="status-btn aborted" onclick="updateJobStatus('Aborted')">
@@ -1898,7 +1898,8 @@
             // For non-complete statuses (In-Progress, Aborted, Cancelled), update normally
             const jobId = currentJob.id;
             closeStatusModal();
-            await updateJobStatusInDB(jobId, newStatus, currentJob.completedDays);
+            // Don't pass completedDays for non-Complete statuses - pass null instead
+            await updateJobStatusInDB(jobId, newStatus, null);
             buildTimeline();
         }
 
