--- a/adminupload.html
+++ b/adminupload.html
@@ -307,7 +307,7 @@
 
     <div class="expected-cols">
         <strong>Required fields (must be mapped):</strong><br>
-        Job Type, Job Number, Address, Postcode, Booked Date, Projected Completion Date, Days, Panel No., Status Update, PO, Lead, Team Number
+        Job Type, Job Number, Address, Postcode, Booked Date, Projected Completion Date, Days, Panel No., Lead, Team Number
     </div>
 
     <div style="text-align: center; margin-top: 3rem;">
@@ -343,7 +343,6 @@
         "Projected Completion Date",
         "Days",
         "Panel No.",
-        "Status Update",
         "Lead",
         "Team Number"
     ];
@@ -570,20 +569,20 @@
         let failed = 0;
 
         for (const row of csvData) {
-            try {
-                const docData = {
-                    "uploadDate": new Date().toISOString(),
-                    "status": (row[columnMapping["Status Update"]] || "pending").toLowerCase()
-                };
+    try {
+        const docData = {
+            "uploadDate": new Date().toISOString()
+        };
+        // REMOVED: "status" field is no longer saved
 
-                requiredFields.forEach(field => {
-                    const csvCol = columnMapping[field];
-                    if (csvCol && row[csvCol] !== undefined && row[csvCol] !== '') {
-                        docData[field] = row[csvCol];
-                    }
-                });
+        requiredFields.forEach(field => {
+            const csvCol = columnMapping[field];
+            if (csvCol && row[csvCol] !== undefined && row[csvCol] !== '') {
+                docData[field] = row[csvCol];
+            }
+        });
 
-                await addDoc(collection(db, "Solar-jobs"), docData);
+        await addDoc(collection(db, "Solar-jobs"), docData);
                 success++;
             } catch (err) {
                 console.error(err);
