--- a/adminaudit.html
+++ b/adminaudit.html
@@ -1256,29 +1256,33 @@ if (allJobs.length < 5) {
                             <div class="audit-badge ${auditBadgeClass}">${auditLabel}</div>
                         </div>
                         <div class="job-details">
-                            <div class="job-detail">
-                                <span class="job-detail-label">Status:</span>
-                                <span class="job-status-badge ${statusClass}">${escapeHtml(job.status)}</span>
-                            </div>
-                            <div class="job-detail">
-                                <span class="job-detail-label">Postcode:</span>
-                                <span class="job-detail-value">${escapeHtml(job.postcode)}</span>
-                            </div>
-                            <div class="job-detail">
-                                <span class="job-detail-label">Engineer:</span>
-                                <span class="job-detail-value">${escapeHtml(job.engineer)}</span>
-                            </div>
-                            <div class="job-detail">
-                                <span class="job-detail-label">Job Type:</span>
-                                <span class="job-detail-value">${escapeHtml(job.jobType)}</span>
-                            </div>
-                            ${job.status === 'Complete' ? `
-                                <div class="job-detail">
-                                    <span class="job-detail-label">Completed:</span>
-                                    <span class="job-detail-value">${formatDate(job.completionDate)}</span>
-                                </div>
-                            ` : ''}
-                        </div>
+    <div class="job-detail">
+        <span class="job-detail-label">Status:</span>
+        <span class="job-status-badge ${statusClass}">${escapeHtml(job.status)}</span>
+    </div>
+    <div class="job-detail">
+        <span class="job-detail-label">Booked Date:</span>
+        <span class="job-detail-value">${formatDate(parseDate(job['Booked Date'] || job['Projected Completion Date']))}</span>
+    </div>
+    <div class="job-detail">
+        <span class="job-detail-label">Postcode:</span>
+        <span class="job-detail-value">${escapeHtml(job.postcode)}</span>
+    </div>
+    <div class="job-detail">
+        <span class="job-detail-label">Engineer:</span>
+        <span class="job-detail-value">${escapeHtml(job.engineer)}</span>
+    </div>
+    <div class="job-detail">
+        <span class="job-detail-label">Job Type:</span>
+        <span class="job-detail-value">${escapeHtml(job.jobType)}</span>
+    </div>
+    ${job.status === 'Complete' ? `
+        <div class="job-detail">
+            <span class="job-detail-label">Completed:</span>
+            <span class="job-detail-value">${formatDate(job.completionDate)}</span>
+        </div>
+    ` : ''}
+</div>
                         ${pendingTimeHTML}
                         ${job.auditNotes ? `
                             <div class="job-notes-preview">
