--- a/workscreen.html
+++ b/workscreen.html
@@ -358,7 +358,7 @@
                     </div>
                     <div class="status-card status-week">
                         <div class="status-header">
-                            <div class="status-label">Today</div>
+                            <div class="status-label">Jobs Starting Today</div>
                             <div class="status-icon">📅</div>
                         </div>
                         <div class="status-value" id="today-jobs">0</div>
