--- a/auditfailtracker.html
+++ b/auditfailtracker.html
@@ -387,10 +387,40 @@
             padding-bottom: 20px;
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
         }
+        .performer-name-section {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
         .performer-name {
             font-size: 1.4em;
             font-weight: bold;
             color: rgba(255, 255, 255, 0.95);
+        }
+        .toggle-jobs-btn {
+            background: rgba(102, 126, 234, 0.3);
+            color: rgba(255, 255, 255, 0.9);
+            border: 1px solid rgba(102, 126, 234, 0.5);
+            padding: 8px 16px;
+            border-radius: 8px;
+            font-size: 0.85em;
+            cursor: pointer;
+            transition: all 0.3s;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+        }
+        .toggle-jobs-btn:hover {
+            background: rgba(102, 126, 234, 0.5);
+            transform: translateY(0);
+            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);
+        }
+        .toggle-jobs-btn .arrow {
+            transition: transform 0.3s;
+            font-size: 0.9em;
+        }
+        .toggle-jobs-btn.expanded .arrow {
+            transform: rotate(180deg);
         }
         .performer-total {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -400,6 +430,64 @@
             font-weight: bold;
             font-size: 1.1em;
             box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
+        }
+        .job-numbers-section {
+            display: none;
+            margin-top: 20px;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.03);
+            border-radius: 12px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+        .job-numbers-section.show {
+            display: block;
+        }
+        .job-numbers-title {
+            font-weight: 600;
+            color: #a8c0ff;
+            margin-bottom: 12px;
+            font-size: 1.05em;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+        .job-numbers-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+            gap: 10px;
+            max-height: 300px;
+            overflow-y: auto;
+            padding: 10px;
+        }
+        .job-number-item {
+            background: rgba(102, 126, 234, 0.15);
+            padding: 10px;
+            border-radius: 8px;
+            text-align: center;
+            border: 1px solid rgba(102, 126, 234, 0.3);
+            color: rgba(255, 255, 255, 0.9);
+            font-size: 0.9em;
+            font-weight: 500;
+            transition: all 0.2s;
+            cursor: default;
+        }
+        .job-number-item:hover {
+            background: rgba(102, 126, 234, 0.25);
+            border-color: rgba(102, 126, 234, 0.5);
+        }
+        .job-numbers-grid::-webkit-scrollbar {
+            width: 8px;
+        }
+        .job-numbers-grid::-webkit-scrollbar-track {
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 10px;
+        }
+        .job-numbers-grid::-webkit-scrollbar-thumb {
+            background: rgba(102, 126, 234, 0.5);
+            border-radius: 10px;
+        }
+        .job-numbers-grid::-webkit-scrollbar-thumb:hover {
+            background: rgba(102, 126, 234, 0.7);
         }
         .fail-codes-grid {
             display: grid;
@@ -1235,11 +1323,13 @@
 
             data.forEach(row => {
                 const name = row['Team'] || 'Unknown';
+                const jobNumber = row['Job number'] || 'N/A';
                 
                 if (!performerData[name]) {
                     performerData[name] = {
                         total: 0,
-                        codes: {}
+                        codes: {},
+                        jobNumbers: new Set()
                     };
                 }
 
@@ -1248,6 +1338,7 @@
                     if (code && selectedCodes.has(code)) {
                         performerData[name].total++;
                         performerData[name].codes[code] = (performerData[name].codes[code] || 0) + 1;
+                        performerData[name].jobNumbers.add(jobNumber);
                     }
                 }
             });
@@ -1263,7 +1354,7 @@
 
             document.getElementById('topPerformers').style.display = 'block';
 
-            const performersHTML = sortedPerformers.map(([name, data]) => {
+            const performersHTML = sortedPerformers.map(([name, data], index) => {
                 const sortedCodes = Object.entries(data.codes)
                     .sort((a, b) => b[1] - a[1]);
 
@@ -1274,11 +1365,30 @@
                     </div>
                 `).join('');
 
+                const jobNumbersArray = Array.from(data.jobNumbers).sort();
+                const jobNumbersHTML = jobNumbersArray.map(jobNum => `
+                    <div class="job-number-item">${jobNum}</div>
+                `).join('');
+
                 return `
                     <div class="performer-card">
                         <div class="performer-header">
-                            <div class="performer-name">${name}</div>
+                            <div class="performer-name-section">
+                                <div class="performer-name">${name}</div>
+                                <button class="toggle-jobs-btn" onclick="toggleJobNumbers(${index})">
+                                    <span>📋 ${jobNumbersArray.length} Job${jobNumbersArray.length !== 1 ? 's' : ''}</span>
+                                    <span class="arrow">▼</span>
+                                </button>
+                            </div>
                             <div class="performer-total">${data.total} Total Fail Codes</div>
+                        </div>
+                        <div class="job-numbers-section" id="job-numbers-${index}">
+                            <div class="job-numbers-title">
+                                📋 Job Numbers (${jobNumbersArray.length})
+                            </div>
+                            <div class="job-numbers-grid">
+                                ${jobNumbersHTML}
+                            </div>
                         </div>
                         <div class="fail-codes-grid">
                             ${codesHTML}
@@ -1294,6 +1404,14 @@
                 item.addEventListener('mousemove', moveTooltip);
                 item.addEventListener('mouseleave', hideTooltip);
             });
+        }
+
+        function toggleJobNumbers(index) {
+            const section = document.getElementById(`job-numbers-${index}`);
+            const button = document.querySelectorAll('.toggle-jobs-btn')[index];
+            
+            section.classList.toggle('show');
+            button.classList.toggle('expanded');
         }
 
         function showTooltip(e) {
