--- a/admin.html
+++ b/admin.html
@@ -790,6 +790,17 @@
                             <label class="form-label">Team Number *</label>
                             <input type="text" class="form-input" id="team-number" required>
                         </div>
+                        <div class="form-group">
+    <label class="form-label">Status Update</label>
+    <select class="form-select" id="status-update">
+        <option value="">No Status</option>
+        <option value="pending">Pending</option>
+        <option value="in-progress">In Progress</option>
+        <option value="complete">Complete</option>
+        <option value="aborted">Aborted</option>
+        <option value="cancelled">Cancelled</option>
+    </select>
+</div>
                     </div>
                   
                     <div style="margin-top: 2rem; display: flex; gap: 1rem;">
